<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clinicapp.ContactUsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/map">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/topPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/clinic_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Clinic Name"
                    android:textAlignment="viewStart"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/address"
                    android:textAlignment="viewStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/clinic_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/clinic_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Country/State/City"
                    android:textAlignment="viewStart" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textAlignment="viewStart"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/clinic_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Clinic Name"
                        android:textAlignment="viewStart" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnPhone"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/ic_contact_phone" />

                    <Button
                        android:id="@+id/btnEmail"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/ic_contact_email" />

                    <Button
                        android:id="@+id/btnLocation"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/ic_contact_location" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_alignParentBottom="true"
        tools:context=".MapsActivity" />
</RelativeLayout>
